--- a/front/css/desafio1.css
+++ b/front/css/desafio1.css
@@ -1,23 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: blueviolet;
+    font-family: 'Roboto', sans-serif;
 }
 .body {
-    position: static;
-    width: 1180px;
-    height: 96px;
-    left: 370px;
-    top: 467px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
-.desafio1__titulo {
-    font-family: 'Roboto', sans-serif;
+.desafio1__caixa{
+    background-color: #AD1AF2;
+    padding: 16px 10px;
+    width: 100%;
+    max-width: 1200px;
+    border-radius: 8px;
+}
+h1, h2 {
     text-align: center;
     color: #FFFFFF;
 }
-.desafio1__texto {
-    text-align: center;
+h1, h2, p{
     color: #FFFFFF;
+}
+h1 {
+    margin-bottom: 8px;
+}
+h2 {
+    margin-bottom: 16px;
+}
+p {
+    font-size: 24px;
+}
+p:not(:last-child) {
+    margin-bottom: 32px;
+}
+strong {
+    color: #00A3FF;
 }
